--- a/css/style.css
+++ b/css/style.css
@@ -670,3 +670,13 @@ p {
 	left: 3px;
 	top: 753px;
 }
+#apDiv28 {
+	position: absolute;
+	width: 713px;
+	height: 44px;
+	z-index: 13;
+	left: 0px;
+	top: 240px;
+	border-radius: 10px 0px 0px 0px;
+	background-color: #003F5E;
+}
